force-app/main/default/objects/Task_Selected_Package__c/Task_Selected_Package__c.object-meta.xml
<CustomObject>
    <label>Task Selected Package</label>
    <nameField>
        <displayFormat>TSP-{00000}</displayFormat>
        <label>Task Selected Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Selected Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>