force-app/main/default/objects/Task_Selected_Package__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Task Selected Packages</relationshipLabel>
    <relationshipName>Task_Selected_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>