force-app/main/default/objects/Task_Selected_Package__c/fields/Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Config_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Config Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>