force-app/main/default/objects/Task_Selected_Package__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Task Selected Packages</relationshipLabel>
    <relationshipName>Task_Selected_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>