force-app/main/default/objects/Task_Selected_Package__c/fields/Task_Package__c.field-meta.xml
<CustomField>
    <fullName>Task_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Package</label>
    <referenceTo>Task_Package__c</referenceTo>
    <relationshipLabel>Task Selected Packages</relationshipLabel>
    <relationshipName>Task_Selected_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>